refactor: change dto code structure